Fixes styling overflow on home and game page.

--- a/src/sass/base/_layout.scss
+++ b/src/sass/base/_layout.scss
@@ -13,6 +13,7 @@ html, body {
   background: $base-background-color;
   height: 100%;
   max-width: 100%;
+  overflow: hidden;
 }
 
 body {
