--- a/src/sass/components/_sheet.scss
+++ b/src/sass/components/_sheet.scss
@@ -82,8 +82,7 @@
 }
 
 body.game {
-  .wrap,
-  main {
+  .wrap {
     height: 100%;
   }
 }
